Add cautionary note about the HorseHead.fits file being present.

--- a/work/notebooks/PlotFromCuts.ipynb
+++ b/work/notebooks/PlotFromCuts.ipynb
@@ -31,7 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load and plot an image from the Astrolabe image server"
+    "## Load and plot an image from the Astrolabe image server\n",
+    "#### NOTE: This assumes that the HorseHead.fits files exists in the user's `images` directory (as used by the image server)"
    ]
   },
   {
@@ -40,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE: This assumes that the HorseHead.fits files exists in the user's `images` directory (as used by the image server)\n",
     "imgURL = 'http://cuts:8000/img/HorseHead.fits'"
    ]
   },
