WIP: updating notebooks for changed image paths.

--- a/work/notebooks/PlotFromCuts.ipynb
+++ b/work/notebooks/PlotFromCuts.ipynb
@@ -28,10 +28,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import io"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load and plot an image from the Astrolabe image server\n",
+    "## Load and plot an image from the Astrolabe image server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First, let's see what images are available from the image server:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(requests.get('http://cuts:8000/img/list').content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### NOTE: This assumes that the HorseHead.fits files exists in the user's `images` directory (as used by the image server)"
    ]
   },
@@ -42,7 +74,7 @@
    "outputs": [],
    "source": [
     "# NOTE: This assumes that the HorseHead.fits files exists in the user's `images` directory (as used by the image server)\n",
-    "imgURL = 'http://cuts:8000/img/HorseHead.fits'"
+    "imgURL = 'http://cuts:8000/img/fetch?path=/vos/images/HorseHead.fits'"
    ]
   },
   {
@@ -89,16 +121,6 @@
    "metadata": {},
    "source": [
     "## Load and plot a cutout from the Astrolabe image server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import io"
    ]
   },
   {
@@ -156,6 +178,13 @@
     "plt.xlabel('RA')\n",
     "plt.ylabel('Dec')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
