Update image plot from Cuts notebook for changed image paths.

--- a/work/notebooks/PlotFromCuts.ipynb
+++ b/work/notebooks/PlotFromCuts.ipynb
@@ -57,14 +57,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(requests.get('http://cuts:8000/img/list').content)"
+    "print(requests.get('http://cuts:8000/img/list').text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NOTE: This assumes that the HorseHead.fits files exists in the user's `images` directory (as used by the image server)"
+    "#### Now, let's select a small image to display. (The following assumes that the `HorseHead.fits` file was listed above. If not, subsitute another file path below)."
    ]
   },
   {
@@ -178,13 +178,6 @@
     "plt.xlabel('RA')\n",
     "plt.ylabel('Dec')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
