Update VOS demo notebooks from latest JupAL, including documentation.

--- a/work/notebooks/TablesViaVO.ipynb
+++ b/work/notebooks/TablesViaVO.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Search Catalogs using the Astrolabe VO Server"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -41,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jtap = pyvo.dal.TAPService(\"http://dals:8080/dals/tap-jwst\")"
+    "jtap = pyvo.dal.TAPService(\"https://hector.cyverse.org/dals/tap-jwst\")"
    ]
   },
   {
@@ -94,7 +101,8 @@
    "source": [
     "### Simple Cone Search: create an SCS connection to the Photometric catalog and retrieve records for nearby objects.\n",
     "\n",
-    "#### Simple Cone Search is currently available for the Jaguar (scs-jaguar), EAZY Results Summary (scs-eazy), and Photometric (scs-photo) catalogs."
+    "#### Simple Cone Search is currently available for the Jaguar (scs-jaguar), EAZY Results Summary (scs-eazy), Photometric (scs-photo),\n",
+    "#### EAZY F200W Results Summary (scs-eazy200), EAZY F356W Results Summary (scs-eazy356), Photometric F200W (scs-photo200), and Photometric F356W (scs-photo356) catalogs."
    ]
   },
   {
@@ -107,7 +115,7 @@
     "radius = u.Quantity(4, unit=\"arcsecond\")\n",
     "\n",
     "# Use scs-jaguar for Jaguar catalog, scs-eazy for EAZY catalog, and scs-photo for the Photometric catalog:\n",
-    "scs = pyvo.dal.SCSService(\"http://dals:8080/dals/scs-photo\")\n",
+    "scs = pyvo.dal.SCSService(\"https://hector.cyverse.org/dals/scs-photo\")\n",
     "nearby = scs.search(pos=pos, radius=radius)\n",
     "nearby"
    ]
@@ -129,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
