--- a/work/notebooks/PlotFromCuts.ipynb
+++ b/work/notebooks/PlotFromCuts.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(requests.get('http://cuts:8000/img/list').text)"
+    "print(requests.get('https://hector.cyverse.org/cuts/img/list').text)"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# NOTE: This assumes that the HorseHead.fits files exists in the user's `images` directory (as used by the image server)\n",
-    "imgURL = 'http://cuts:8000/img/fetch?path=/vos/images/HorseHead.fits'"
+    "imgURL = 'https://hector.cyverse.org/cuts/img/fetch?path=/vos/images/HorseHead.fits'"
    ]
   },
   {
@@ -84,7 +84,22 @@
    "outputs": [],
    "source": [
     "image_file = download_file(imgURL)\n",
-    "image_hdus = fits.open(image_file)\n",
+    "image_hdus = fits.open(image_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### After downloading and opening the image, we can inspect its headers and properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "image_hdus.info()"
    ]
   },
@@ -94,16 +109,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = image_hdus[0].data"
+    "image = image_hdus[0].data\n",
+    "image.shape"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "image.shape"
+    "#### Finally, we can plot the image."
    ]
   },
   {
@@ -124,12 +138,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First, get a cutout of 10 arc seconds from an image, with the specified filter, which contains the specified point."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coURL = 'http://cuts:8000/img/co/cutout_by_filter'\n",
+    "coURL = 'https://hector.cyverse.org/cuts/img/co/cutout_by_filter'\n",
     "params={'ra': '53.16', 'dec': '-27.78', 'sizeArcSec': '10', 'filter': 'F356W'}"
    ]
   },
@@ -140,7 +161,22 @@
    "outputs": [],
    "source": [
     "co_bytes = requests.get(coURL, params)\n",
-    "co_hdus = fits.open(io.BytesIO(co_bytes.content))\n",
+    "co_hdus = fits.open(io.BytesIO(co_bytes.content))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### After downloading and opening the image, we can inspect its headers and properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "co_hdus.info()"
    ]
   },
@@ -152,7 +188,15 @@
    "source": [
     "co_hdu = co_hdus[0]\n",
     "wcs = WCS(co_hdu.header)\n",
-    "cutout = co_hdu.data"
+    "cutout = co_hdu.data\n",
+    "cutout.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Finally, we can select the data and plot the image."
    ]
   },
   {
@@ -196,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
